[package]
name = "colorparser-css"
authors = ["0xJWLabs <0xjwlabs@gmail.com>"]
version = "0.0.7"
edition = "2024"
description = "CSS color parser library"
readme = "README.md"
repository = "https://github.com/win-rs/colorparser-css"
homepage = "https://github.com/win-rs/colorparser-css"
documentation = "https://docs.rs/colorparser-css/"
license = "MIT OR Apache-2.0"
keywords = ["color", "colour", "css", "parser"]
categories = ["graphics", "parser-implementations"]

[package.metadata.docs.rs]
features = ["named-colors", "hash-colors"]

[features]
default = ["hash-colors", "serde"]
hash-colors = ["rustc-hash"]
named-colors = ["phf"]

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"], optional = true }
phf = { version = "0.11.3", optional = true, features = ["macros"] }
rustc-hash = { version = "2.1.0", optional = true }


[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = [
  "Win32_Graphics_Dwm",
  "Win32_Foundation",
] }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false
