[package]
name = "colorparser-css"
authors = ["0xJWLabs <0xjwlabs@gmail.com>"]
version = "0.1.1"
edition = "2024"
description = "CSS color parser library"
readme = "README.md"
repository = "https://github.com/win-rs/colorparser-css"
homepage = "https://github.com/win-rs/colorparser-css"
documentation = "https://docs.rs/colorparser-css/"
license = "MIT OR Apache-2.0"
keywords = ["color", "colour", "css", "parser"]
categories = ["graphics", "parser-implementations"]

[package.metadata.docs.rs]
features = ["named-colors", "theme"]

[features]
default = ["named-colors", "serde", "theme", "fast-hash"]
named-colors = []
fast-hash = ["fx-hash"]
theme = ["serde_jsonc2"]

[dependencies]
regex = "1.11.1"
fx-hash = { version = "0.1.0", optional = true }
serde = { version = "1.0.217", features = ["derive"], optional = true }
serde_jsonc2 = { version = "0.1.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = [
  "Win32_Graphics_Dwm",
  "Win32_Foundation",
] }
